// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ranking golden (max-yield) > produces stable top-N ordering per scenario under max-yield 1`] = `
{
  "broad-generic": [
    "hsbc-premier",
    "kotak-infinite",
    "icici-emeralde-private-metal",
    "amex-gold",
    "hdfc-diners-club-black-metal",
    "amex-membership-rewards",
    "axis-magnus-burgundy",
    "sc-ultimate",
    "hsbc-travelone",
    "hdfc-regalia-gold",
    "hdfc-infinia-metal",
    "axis-atlas",
  ],
  "category-bill-payments": [
    "icici-emeralde-private-metal",
    "sc-ultimate",
    "amex-gold",
    "phonepe-sbi-select-black",
    "hdfc-phonepe-ultimo",
    "sbi-card-pulse",
    "indusind-eazydiner",
    "cheq-au",
    "hdfc-marriott-bonvoy",
    "bpcl-sbi-octane",
    "sc-rewards",
    "axis-ace",
  ],
  "category-education-payments": [
    "amex-membership-rewards",
    "amex-gold",
    "icici-emeralde-private-metal",
    "hsbc-premier",
    "sc-ultimate",
    "axis-atlas",
    "indusind-eazydiner",
    "hdfc-infinia-metal",
    "amex-platinum-travel",
    "hdfc-regalia-gold",
    "sbi-card-pulse",
    "indusind-eazydiner-platinum",
  ],
  "category-rent": [
    "hsbc-premier",
    "amex-membership-rewards",
    "hsbc-travelone",
    "amex-platinum-travel",
    "amex-gold",
    "sc-ultimate",
    "sc-beyond",
    "axis-magnus-burgundy",
    "amex-smartearn",
    "amex-platinum-reserve",
    "axis-magnus",
    "amex-platinum",
  ],
  "category-rent-payment": [
    "hsbc-premier",
    "amex-membership-rewards",
    "hsbc-travelone",
    "amex-platinum-travel",
    "amex-gold",
    "sc-ultimate",
    "sc-beyond",
    "axis-magnus-burgundy",
    "amex-smartearn",
    "amex-platinum-reserve",
    "axis-magnus",
    "amex-platinum",
  ],
  "category-utilities": [
    "icici-emeralde-private-metal",
    "sc-ultimate",
    "amex-gold",
    "phonepe-sbi-select-black",
    "hdfc-phonepe-ultimo",
    "sbi-card-pulse",
    "indusind-eazydiner",
    "cheq-au",
    "hdfc-marriott-bonvoy",
    "bpcl-sbi-octane",
    "sc-rewards",
    "axis-ace",
  ],
  "category-utility-bills": [
    "icici-emeralde-private-metal",
    "sc-ultimate",
    "amex-gold",
    "phonepe-sbi-select-black",
    "hdfc-phonepe-ultimo",
    "sbi-card-pulse",
    "indusind-eazydiner",
    "cheq-au",
    "hdfc-marriott-bonvoy",
    "bpcl-sbi-octane",
    "sc-rewards",
    "axis-ace",
  ],
  "combo-dining-under-5000": [
    "hdfc-swiggy",
    "hdfc-swiggy-orange",
    "hsbc-live-plus",
    "hsbc-rupay-cashback",
    "hdfc-swiggy-black",
    "yes-paisabazaar-paisasave",
    "indusind-eazydiner",
    "hdfc-marriott-bonvoy",
    "bobcard-eterna",
    "axis-fibe",
    "sbi-card-prime",
    "shaurya-select-sbi",
  ],
  "combo-premium-travel": [
    "bobcard-etihad-guest-premium",
    "axis-indigo-premium",
    "axis-atlas",
    "krisflyer-sbi-apex",
    "aurum-sbi",
    "sc-ultimate",
    "amex-platinum-travel",
    "icici-adani-one-signature",
    "equitas-powermiles",
    "idfc-mayura",
    "rbl-icon",
    "indusind-celesta",
  ],
  "exact-card-atlas": [
    "axis-atlas",
    "axis-magnus-burgundy",
    "axis-magnus",
    "axis-flipkart-super-elite",
    "axis-horizon",
    "axis-airtel",
    "axis-cashback",
    "axis-ace",
    "axis-flipkart",
    "axis-indigo-premium",
    "axis-fibe",
    "axis-samsung-signature",
  ],
  "forex": [
    "kotak-infinite",
    "hsbc-premier",
    "icici-emeralde-private-metal",
    "amex-gold",
    "axis-magnus-burgundy",
    "amex-membership-rewards",
    "sc-ultimate",
    "hdfc-diners-club-black-metal",
    "equitas-powermiles",
    "hdfc-infinia-metal",
    "au-ixigo",
    "hdfc-regalia-gold",
  ],
  "forex-zero": [
    "au-ixigo",
    "bobcard-etihad-guest-premium",
    "kotak-solitaire",
    "idfc-mayura",
    "rbl-world-safari",
    "idfc-wow",
    "scapia-federal",
    "scapia-bobcard",
    "indusind-pioneer-heritage-metal",
  ],
  "guest-lounge-query": [
    "hsbc-premier",
    "axis-magnus-burgundy",
    "axis-atlas",
    "axis-magnus",
    "kotak-solitaire",
    "yes-marquee",
    "sc-beyond",
    "kotak-white-reserve",
    "idfc-mayura",
    "axis-reserve",
  ],
  "intl-lounge-query": [
    "hsbc-premier",
    "icici-emeralde-private-metal",
    "hdfc-diners-club-black-metal",
    "axis-magnus-burgundy",
    "sc-ultimate",
    "hsbc-travelone",
    "hdfc-regalia-gold",
    "hdfc-infinia-metal",
    "axis-atlas",
    "axis-magnus",
    "kotak-solitaire",
    "bobcard-etihad-guest-premium",
  ],
  "issuer-amex": [
    "amex-gold",
    "amex-membership-rewards",
    "amex-platinum-travel",
    "amex-smartearn",
    "amex-platinum-reserve",
    "amex-platinum",
  ],
  "issuer-axis": [
    "axis-magnus-burgundy",
    "axis-atlas",
    "axis-airtel",
    "axis-magnus",
    "axis-flipkart-super-elite",
    "axis-cashback",
    "axis-horizon",
    "axis-ace",
    "axis-flipkart",
    "axis-indigo-premium",
    "axis-fibe",
    "axis-samsung-signature",
  ],
  "issuer-hdfc": [
    "hdfc-diners-club-black-metal",
    "hdfc-regalia-gold",
    "hdfc-infinia-metal",
    "hdfc-swiggy",
    "hdfc-swiggy-black",
    "hdfc-swiggy-orange",
    "hdfc-marriott-bonvoy",
    "hdfc-diners-club-privilege",
    "hdfc-phonepe-ultimo",
    "hdfc-shoppers-stop-black",
    "hdfc-millennia",
    "hdfc-shoppers-stop",
  ],
  "issuer-icici": [
    "icici-emeralde-private-metal",
    "icici-times-black",
    "icici-amazon-pay",
    "icici-hpcl-super-saver",
    "icici-coral-rupay",
    "icici-adani-one-signature",
    "icici-coral",
    "icici-adani-one-platinum",
    "icici-makemytrip",
    "icici-sapphiro",
    "icici-emeralde",
    "icici-hpcl-coral",
  ],
  "issuer-sbi": [
    "sbi-card-pulse",
    "phonepe-sbi-select-black",
    "krisflyer-sbi-apex",
    "titan-sbi",
    "tata-neu-infinity-sbi",
    "indigo-sbi-elite",
    "sbi-card-miles-elite",
    "sbi-cashback",
    "sbi-card-miles-prime",
    "sbi-card-elite",
    "flipkart-sbi",
    "aurum-sbi",
  ],
  "lifetime-free": [
    "csb-jupiter-edge-plus",
    "yes-kiwi",
    "hsbc-visa-platinum",
    "au-ixigo",
    "axis-fibe",
    "hsbc-rupay-platinum",
    "indusind-tiger",
    "indusind-eazydiner-platinum",
    "federal-imperio",
    "yes-paisabazaar-paisasave-rupay",
    "axis-kwik",
    "federal-signet",
  ],
  "lounge": [
    "hsbc-premier",
    "kotak-infinite",
    "icici-emeralde-private-metal",
    "hdfc-diners-club-black-metal",
    "axis-magnus-burgundy",
    "sc-ultimate",
    "hdfc-regalia-gold",
    "hsbc-travelone",
    "hdfc-infinia-metal",
    "axis-atlas",
    "axis-airtel",
    "amex-platinum-travel",
  ],
  "lounge-query": [
    "hsbc-premier",
    "kotak-infinite",
    "icici-emeralde-private-metal",
    "hdfc-diners-club-black-metal",
    "axis-magnus-burgundy",
    "sc-ultimate",
    "hsbc-travelone",
    "hdfc-regalia-gold",
    "hdfc-infinia-metal",
    "axis-atlas",
    "axis-airtel",
    "amex-platinum-travel",
  ],
  "max-fee-5000-query": [
    "kotak-infinite",
    "amex-gold",
    "amex-membership-rewards",
    "sc-ultimate",
    "hsbc-travelone",
    "hdfc-regalia-gold",
    "axis-atlas",
    "axis-airtel",
    "amex-platinum-travel",
    "kotak-solitaire",
    "csb-jupiter-edge-plus",
    "bobcard-etihad-guest-premium",
  ],
  "max-fee-zero": [
    "kotak-infinite",
    "csb-jupiter-edge-plus",
    "kotak-solitaire",
    "yes-kiwi",
    "hsbc-visa-platinum",
    "au-ixigo",
    "axis-fibe",
    "icici-amazon-pay",
    "hsbc-rupay-platinum",
    "indusind-tiger",
    "indusind-eazydiner-platinum",
    "federal-imperio",
  ],
  "merchant-amazon": [
    "cheq-au",
    "icici-amazon-pay",
    "amex-smartearn",
    "hdfc-moneyback-plus",
  ],
  "merchant-flipkart": [
    "axis-flipkart-super-elite",
    "axis-samsung-signature",
    "flipkart-sbi",
    "axis-flipkart",
    "cheq-au",
    "axis-neo",
  ],
  "merchant-swiggy": [
    "axis-airtel",
    "hdfc-swiggy",
    "hdfc-swiggy-black",
    "hdfc-swiggy-orange",
    "hdfc-diners-club-privilege",
    "hsbc-live-plus",
    "hsbc-rupay-cashback",
    "axis-ace",
    "axis-fibe",
    "axis-rewards",
    "axis-select",
    "axis-my-zone",
  ],
  "network-mastercard": [
    "hsbc-premier",
    "hdfc-regalia-gold",
    "hsbc-travelone",
    "sc-ultimate",
    "hdfc-swiggy",
    "hdfc-swiggy-black",
    "sbi-card-elite",
    "hdfc-swiggy-orange",
    "sbi-card-prime",
    "indigo-sbi-elite",
    "axis-airtel",
    "hdfc-millennia",
  ],
  "network-rupay": [
    "yes-kiwi",
    "au-ixigo",
    "indigo-sbi-elite",
    "kotak-white-reserve",
    "yes-pop-club",
    "yes-reserv",
    "reliance-sbi-prime",
    "phonepe-sbi-select-black",
    "hdfc-tata-neu-infinity",
    "hsbc-rupay-platinum",
    "tata-neu-infinity-sbi",
    "hsbc-rupay-cashback",
  ],
  "network-visa": [
    "sc-priority-visa-infinite",
    "hsbc-visa-platinum",
    "hdfc-infinia-metal",
    "icici-emeralde-private-metal",
    "hdfc-regalia-gold",
    "kotak-solitaire",
    "axis-atlas",
    "hdfc-shoppers-stop-black",
    "axis-magnus-burgundy",
    "bobcard-etihad-guest-premium",
    "yes-marquee",
    "indusind-eazydiner",
  ],
  "segment-beginner": [
    "csb-jupiter-edge-plus",
    "yes-kiwi",
    "hdfc-swiggy",
    "hsbc-live-plus",
    "hdfc-swiggy-black",
    "hsbc-rupay-cashback",
    "axis-airtel",
    "amex-smartearn",
    "cheq-au",
    "hdfc-diners-club-privilege",
    "hdfc-phonepe-ultimo",
    "hdfc-millennia",
  ],
  "segment-mid-premium": [
    "hdfc-regalia-gold",
    "hsbc-travelone",
    "hdfc-shoppers-stop-black",
    "yes-marquee",
    "amex-membership-rewards",
    "hdfc-marriott-bonvoy",
    "bobcard-eterna",
    "indusind-eazydiner",
    "amex-gold",
    "phonepe-sbi-select-black",
    "sbi-card-elite",
    "titan-sbi",
  ],
  "segment-premium": [
    "bobcard-etihad-guest-premium",
    "axis-indigo-premium",
    "axis-atlas",
    "amex-platinum-travel",
    "sc-ultimate",
    "equitas-powermiles",
    "krisflyer-sbi-apex",
    "aurum-sbi",
    "icici-adani-one-signature",
    "rbl-icon",
    "idfc-mayura",
    "indusind-celesta",
  ],
  "segment-super-premium": [
    "hsbc-premier",
    "axis-magnus-burgundy",
    "hdfc-diners-club-black-metal",
    "hdfc-infinia-metal",
    "icici-emeralde-private-metal",
    "axis-magnus",
    "kotak-solitaire",
    "icici-times-black",
    "sc-beyond",
    "kotak-white-reserve",
    "amex-platinum-reserve",
    "axis-reserve",
  ],
  "spend-fuel-heavy": [
    "hsbc-premier",
    "hdfc-infinia-metal",
    "icici-emeralde-private-metal",
    "hdfc-diners-club-black-metal",
    "hdfc-regalia-gold",
    "hsbc-travelone",
    "axis-atlas",
    "kotak-solitaire",
    "amex-platinum-travel",
    "axis-magnus-burgundy",
    "hdfc-marriott-bonvoy",
    "sc-ultimate",
  ],
  "spend-high-base": [
    "hsbc-premier",
    "icici-emeralde-private-metal",
    "kotak-infinite",
    "axis-magnus-burgundy",
    "hdfc-diners-club-black-metal",
    "amex-gold",
    "amex-membership-rewards",
    "hsbc-travelone",
    "sc-ultimate",
    "hdfc-infinia-metal",
    "hdfc-regalia-gold",
    "axis-atlas",
  ],
  "spend-international": [
    "hsbc-premier",
    "bobcard-etihad-guest-premium",
    "hdfc-infinia-metal",
    "icici-emeralde-private-metal",
    "equitas-powermiles",
    "sc-ultimate",
    "icici-times-black",
    "yes-marquee",
    "kotak-solitaire",
    "au-ixigo",
    "hdfc-regalia-gold",
    "idfc-mayura",
  ],
  "spend-level-heavy": [
    "hsbc-premier",
    "kotak-infinite",
    "icici-emeralde-private-metal",
    "amex-gold",
    "hdfc-diners-club-black-metal",
    "amex-membership-rewards",
    "axis-magnus-burgundy",
    "sc-ultimate",
    "hsbc-travelone",
    "hdfc-regalia-gold",
    "hdfc-infinia-metal",
    "axis-airtel",
  ],
  "spend-level-light": [
    "kotak-infinite",
    "icici-emeralde-private-metal",
    "hsbc-premier",
    "amex-gold",
    "amex-membership-rewards",
    "axis-magnus-burgundy",
    "hdfc-diners-club-black-metal",
    "sc-ultimate",
    "hsbc-travelone",
    "hdfc-infinia-metal",
    "hdfc-regalia-gold",
    "axis-atlas",
  ],
  "spend-level-mid": [
    "hsbc-premier",
    "kotak-infinite",
    "icici-emeralde-private-metal",
    "amex-gold",
    "amex-membership-rewards",
    "hdfc-diners-club-black-metal",
    "axis-magnus-burgundy",
    "sc-ultimate",
    "hsbc-travelone",
    "hdfc-infinia-metal",
    "hdfc-regalia-gold",
    "axis-airtel",
  ],
  "spend-travel-heavy": [
    "hsbc-premier",
    "icici-emeralde-private-metal",
    "hdfc-diners-club-black-metal",
    "axis-magnus-burgundy",
    "hdfc-infinia-metal",
    "hsbc-travelone",
    "kotak-infinite",
    "amex-gold",
    "amex-membership-rewards",
    "sc-ultimate",
    "hdfc-regalia-gold",
    "axis-atlas",
  ],
  "usecase-cashback": [
    "axis-airtel",
    "hdfc-swiggy",
    "yes-kiwi",
    "hdfc-swiggy-black",
    "hdfc-swiggy-orange",
    "hsbc-live-plus",
    "titan-sbi",
    "axis-cashback",
    "hsbc-rupay-cashback",
    "kotak-cashback-plus",
    "hdfc-millennia",
    "sbi-cashback",
  ],
  "usecase-dining": [
    "hdfc-swiggy",
    "hdfc-swiggy-orange",
    "hsbc-live-plus",
    "hsbc-rupay-cashback",
    "hdfc-swiggy-black",
    "yes-paisabazaar-paisasave",
    "indusind-eazydiner",
    "hdfc-marriott-bonvoy",
    "bobcard-eterna",
    "axis-fibe",
    "sbi-card-prime",
    "shaurya-select-sbi",
  ],
  "usecase-entertainment": [
    "hdfc-marriott-bonvoy",
    "hdfc-diners-club-privilege",
    "hsbc-live-plus",
    "hsbc-rupay-cashback",
    "sbi-card-elite",
    "sbi-card-prime",
    "icici-coral",
    "landmark-rewards-sbi-prime",
    "bpcl-sbi-octane",
    "axis-my-zone",
    "bobcard-easy",
  ],
  "usecase-fuel": [
    "bpcl-sbi-octane",
    "idfc-first-power-plus",
    "axis-indianoil-easy",
    "icici-hpcl-super-saver",
    "hdfc-indianoil",
    "kotak-cashback-plus",
    "idfc-first-power",
    "bpcl-sbi",
    "axis-indianoil",
    "icici-hpcl-coral",
    "axis-indianoil-premium",
    "idfc-first-earn",
  ],
  "usecase-grocery": [
    "hsbc-live-plus",
    "rbl-patanjali-vishisht",
    "rbl-patanjali-swarn",
    "hdfc-swiggy",
    "hdfc-swiggy-orange",
    "hdfc-swiggy-black",
    "hsbc-rupay-cashback",
    "kotak-cashback-plus",
    "sc-manhattan-platinum",
    "rbl-shoprite",
    "sbi-card-prime",
    "sbi-card-elite",
  ],
  "usecase-online": [
    "csb-jupiter-edge-plus",
    "axis-cashback",
    "indusind-eazydiner",
    "phonepe-sbi-select-black",
    "kotak-cashback-plus",
    "sbi-cashback",
    "au-ixigo",
    "hdfc-pixel-play",
    "bobcard-eterna",
    "cheq-au",
    "axis-airtel",
    "axis-fibe",
  ],
  "usecase-travel": [
    "hsbc-premier",
    "kotak-infinite",
    "icici-emeralde-private-metal",
    "amex-gold",
    "hdfc-diners-club-black-metal",
    "amex-membership-rewards",
    "axis-magnus-burgundy",
    "sc-ultimate",
    "hdfc-regalia-gold",
    "hdfc-infinia-metal",
    "hsbc-travelone",
    "axis-atlas",
  ],
  "usecase-upi": [
    "yes-kiwi",
    "au-ixigo",
    "indigo-sbi-elite",
    "kotak-white-reserve",
    "yes-pop-club",
    "yes-reserv",
    "reliance-sbi-prime",
    "phonepe-sbi-select-black",
    "hdfc-tata-neu-infinity",
    "hsbc-rupay-platinum",
    "tata-neu-infinity-sbi",
    "hsbc-rupay-cashback",
  ],
}
`;

exports[`ranking golden (representative queries) > produces stable top-N ordering per scenario 1`] = `
{
  "broad-generic": [
    "hsbc-premier",
    "hdfc-diners-club-black-metal",
    "axis-magnus-burgundy",
    "hdfc-infinia-metal",
    "icici-emeralde-private-metal",
    "hsbc-travelone",
    "hdfc-regalia-gold",
    "axis-atlas",
    "kotak-solitaire",
    "axis-magnus",
    "yes-marquee",
    "bobcard-etihad-guest-premium",
  ],
  "category-bill-payments": [
    "icici-emeralde-private-metal",
    "hdfc-phonepe-ultimo",
    "sc-ultimate",
    "amex-gold",
    "phonepe-sbi-select-black",
    "hdfc-indianoil",
    "hdfc-infinia-metal",
    "cheq-au",
    "axis-ace",
    "bpcl-sbi-octane",
    "sbi-card-prime",
    "indusind-eazydiner",
  ],
  "category-education-payments": [
    "amex-membership-rewards",
    "icici-emeralde-private-metal",
    "hsbc-premier",
    "hdfc-infinia-metal",
    "amex-gold",
    "axis-atlas",
    "sc-ultimate",
    "indusind-eazydiner",
    "hdfc-regalia-gold",
    "amex-platinum-travel",
    "amex-smartearn",
    "hdfc-millennia",
  ],
  "category-rent": [
    "hsbc-premier",
    "hsbc-travelone",
    "amex-platinum-travel",
    "amex-membership-rewards",
    "sc-ultimate",
    "amex-gold",
    "amex-smartearn",
    "axis-magnus-burgundy",
    "amex-platinum-reserve",
    "axis-magnus",
    "sc-beyond",
    "amex-platinum",
  ],
  "category-rent-payment": [
    "hsbc-premier",
    "hsbc-travelone",
    "amex-platinum-travel",
    "amex-membership-rewards",
    "sc-ultimate",
    "amex-gold",
    "amex-smartearn",
    "axis-magnus-burgundy",
    "amex-platinum-reserve",
    "axis-magnus",
    "sc-beyond",
    "amex-platinum",
  ],
  "category-utilities": [
    "icici-emeralde-private-metal",
    "hdfc-phonepe-ultimo",
    "sc-ultimate",
    "amex-gold",
    "phonepe-sbi-select-black",
    "hdfc-infinia-metal",
    "cheq-au",
    "axis-ace",
    "bpcl-sbi-octane",
    "sbi-card-prime",
    "indusind-eazydiner",
    "hdfc-marriott-bonvoy",
  ],
  "category-utility-bills": [
    "cheq-au",
    "axis-ace",
    "sbi-card-prime",
    "icici-emeralde-private-metal",
    "sc-super-value-titanium",
    "hdfc-phonepe-ultimo",
    "sc-ultimate",
    "icici-hpcl-super-saver",
    "amex-gold",
    "phonepe-sbi-select-black",
    "bobcard-hpcl-energie",
    "idfc-first-power",
  ],
  "combo-dining-under-5000": [
    "hdfc-swiggy",
    "hsbc-live-plus",
    "hdfc-swiggy-black",
    "yes-paisabazaar-paisasave",
    "hdfc-swiggy-orange",
    "bobcard-eterna",
    "hsbc-rupay-cashback",
    "sbi-card-prime",
    "indusind-eazydiner",
    "yes-first-preferred",
    "bpcl-sbi-octane",
    "hdfc-marriott-bonvoy",
  ],
  "combo-premium-travel": [
    "bobcard-etihad-guest-premium",
    "axis-indigo-premium",
    "axis-atlas",
    "krisflyer-sbi-apex",
    "aurum-sbi",
    "sc-ultimate",
    "amex-platinum-travel",
    "icici-adani-one-signature",
    "equitas-powermiles",
    "idfc-mayura",
    "rbl-icon",
    "indusind-celesta",
  ],
  "exact-card-atlas": [
    "axis-atlas",
    "axis-magnus-burgundy",
    "axis-magnus",
    "axis-flipkart-super-elite",
    "axis-horizon",
    "axis-airtel",
    "axis-cashback",
    "axis-ace",
    "axis-flipkart",
    "axis-indigo-premium",
    "axis-fibe",
    "axis-samsung-signature",
  ],
  "forex": [
    "hsbc-premier",
    "hdfc-diners-club-black-metal",
    "axis-magnus-burgundy",
    "equitas-powermiles",
    "hdfc-infinia-metal",
    "icici-emeralde-private-metal",
    "hsbc-travelone",
    "hdfc-regalia-gold",
    "axis-atlas",
    "bobcard-etihad-guest-premium",
    "axis-magnus",
    "icici-times-black",
  ],
  "forex-zero": [
    "bobcard-etihad-guest-premium",
    "kotak-solitaire",
    "idfc-mayura",
    "au-ixigo",
    "rbl-world-safari",
    "idfc-wow",
    "scapia-federal",
    "scapia-bobcard",
    "indusind-pioneer-heritage-metal",
  ],
  "guest-lounge-query": [
    "hsbc-premier",
    "axis-magnus-burgundy",
    "kotak-white-reserve",
    "kotak-solitaire",
    "axis-magnus",
    "axis-reserve",
    "yes-marquee",
    "sc-beyond",
    "idfc-mayura",
    "axis-atlas",
  ],
  "intl-lounge-query": [
    "hsbc-premier",
    "axis-magnus-burgundy",
    "axis-magnus",
    "yes-marquee",
    "kotak-solitaire",
    "kotak-white-reserve",
    "hdfc-diners-club-black-metal",
    "axis-reserve",
    "hdfc-infinia-metal",
    "icici-times-black",
    "sc-beyond",
    "aurum-sbi",
  ],
  "issuer-amex": [
    "amex-platinum-travel",
    "amex-gold",
    "amex-membership-rewards",
    "amex-platinum-reserve",
    "amex-smartearn",
    "amex-platinum",
  ],
  "issuer-axis": [
    "axis-magnus-burgundy",
    "axis-atlas",
    "axis-magnus",
    "axis-flipkart-super-elite",
    "axis-cashback",
    "axis-horizon",
    "axis-flipkart",
    "axis-samsung-signature",
    "axis-ace",
    "axis-indigo-premium",
    "axis-fibe",
    "axis-airtel",
  ],
  "issuer-hdfc": [
    "hdfc-diners-club-black-metal",
    "hdfc-infinia-metal",
    "hdfc-regalia-gold",
    "hdfc-marriott-bonvoy",
    "hdfc-diners-club-privilege",
    "hdfc-swiggy",
    "hdfc-swiggy-black",
    "hdfc-swiggy-orange",
    "hdfc-tata-neu-infinity",
    "hdfc-phonepe-ultimo",
    "hdfc-shoppers-stop-black",
    "hdfc-millennia",
  ],
  "issuer-icici": [
    "icici-emeralde-private-metal",
    "icici-times-black",
    "icici-amazon-pay",
    "icici-adani-one-signature",
    "icici-adani-one-platinum",
    "icici-makemytrip",
    "icici-emeralde",
    "icici-sapphiro",
    "icici-coral-rupay",
    "icici-hpcl-coral",
    "icici-coral",
    "icici-hpcl-super-saver",
  ],
  "issuer-sbi": [
    "krisflyer-sbi-apex",
    "tata-neu-infinity-sbi",
    "titan-sbi",
    "phonepe-sbi-select-black",
    "aurum-sbi",
    "indigo-sbi-elite",
    "flipkart-sbi",
    "sbi-card-miles-elite",
    "sbi-cashback",
    "sbi-card-prime",
    "sbi-card-miles-prime",
    "tata-neu-plus-sbi",
  ],
  "lifetime-free": [
    "csb-jupiter-edge-plus",
    "hsbc-visa-platinum",
    "yes-kiwi",
    "au-ixigo",
    "indusind-tiger",
    "axis-fibe",
    "hsbc-rupay-platinum",
    "yes-paisabazaar-paisasave-rupay",
    "axis-kwik",
    "federal-imperio",
    "federal-signet",
    "idfc-first-wealth",
  ],
  "lounge": [
    "hsbc-premier",
    "axis-magnus-burgundy",
    "kotak-white-reserve",
    "kotak-solitaire",
    "axis-reserve",
    "axis-magnus",
    "yes-marquee",
    "hdfc-diners-club-black-metal",
    "sc-beyond",
    "hdfc-infinia-metal",
    "icici-times-black",
    "amex-platinum",
  ],
  "lounge-query": [
    "hsbc-premier",
    "axis-magnus-burgundy",
    "kotak-white-reserve",
    "kotak-solitaire",
    "axis-magnus",
    "axis-reserve",
    "yes-marquee",
    "hdfc-diners-club-black-metal",
    "sc-beyond",
    "hdfc-infinia-metal",
    "icici-times-black",
    "amex-platinum",
  ],
  "max-fee-5000-query": [
    "hsbc-travelone",
    "hdfc-regalia-gold",
    "axis-atlas",
    "kotak-solitaire",
    "bobcard-etihad-guest-premium",
    "sc-ultimate",
    "amex-platinum-travel",
    "equitas-powermiles",
    "equitas-selfe",
    "cheq-au",
    "hdfc-marriott-bonvoy",
    "amex-gold",
  ],
  "max-fee-zero": [
    "kotak-solitaire",
    "yes-kiwi",
    "csb-jupiter-edge-plus",
    "hsbc-visa-platinum",
    "icici-amazon-pay",
    "au-ixigo",
    "indusind-tiger",
    "axis-fibe",
    "sc-priority-visa-infinite",
    "kotak-infinite",
    "hsbc-rupay-platinum",
    "yes-paisabazaar-paisasave-rupay",
  ],
  "merchant-amazon": [
    "icici-amazon-pay",
    "cheq-au",
    "hdfc-moneyback-plus",
    "amex-smartearn",
  ],
  "merchant-flipkart": [
    "axis-flipkart-super-elite",
    "axis-flipkart",
    "flipkart-sbi",
    "cheq-au",
    "axis-samsung-signature",
    "axis-neo",
  ],
  "merchant-swiggy": [
    "hdfc-swiggy",
    "hdfc-swiggy-black",
    "hdfc-swiggy-orange",
    "hdfc-diners-club-privilege",
    "hsbc-live-plus",
    "axis-ace",
    "axis-fibe",
    "axis-airtel",
    "hsbc-rupay-cashback",
    "axis-rewards",
    "axis-my-zone",
    "axis-select",
  ],
  "network-mastercard": [
    "hsbc-premier",
    "hdfc-regalia-gold",
    "hsbc-travelone",
    "sc-ultimate",
    "hdfc-swiggy",
    "hdfc-swiggy-black",
    "sbi-card-elite",
    "hdfc-swiggy-orange",
    "sbi-card-prime",
    "indigo-sbi-elite",
    "axis-airtel",
    "hdfc-millennia",
  ],
  "network-rupay": [
    "yes-kiwi",
    "au-ixigo",
    "indigo-sbi-elite",
    "kotak-white-reserve",
    "yes-pop-club",
    "yes-reserv",
    "reliance-sbi-prime",
    "phonepe-sbi-select-black",
    "hdfc-tata-neu-infinity",
    "hsbc-rupay-platinum",
    "tata-neu-infinity-sbi",
    "hsbc-rupay-cashback",
  ],
  "network-visa": [
    "sc-priority-visa-infinite",
    "hsbc-visa-platinum",
    "hdfc-infinia-metal",
    "icici-emeralde-private-metal",
    "hdfc-regalia-gold",
    "kotak-solitaire",
    "axis-atlas",
    "hdfc-shoppers-stop-black",
    "axis-magnus-burgundy",
    "bobcard-etihad-guest-premium",
    "yes-marquee",
    "indusind-eazydiner",
  ],
  "segment-beginner": [
    "csb-jupiter-edge-plus",
    "yes-kiwi",
    "hdfc-swiggy",
    "hsbc-live-plus",
    "hdfc-swiggy-black",
    "hsbc-rupay-cashback",
    "axis-airtel",
    "amex-smartearn",
    "cheq-au",
    "hdfc-diners-club-privilege",
    "hdfc-phonepe-ultimo",
    "hdfc-millennia",
  ],
  "segment-mid-premium": [
    "hdfc-regalia-gold",
    "hsbc-travelone",
    "hdfc-shoppers-stop-black",
    "yes-marquee",
    "amex-membership-rewards",
    "hdfc-marriott-bonvoy",
    "bobcard-eterna",
    "indusind-eazydiner",
    "amex-gold",
    "phonepe-sbi-select-black",
    "sbi-card-elite",
    "titan-sbi",
  ],
  "segment-premium": [
    "bobcard-etihad-guest-premium",
    "axis-indigo-premium",
    "axis-atlas",
    "amex-platinum-travel",
    "sc-ultimate",
    "equitas-powermiles",
    "krisflyer-sbi-apex",
    "aurum-sbi",
    "icici-adani-one-signature",
    "rbl-icon",
    "idfc-mayura",
    "indusind-celesta",
  ],
  "segment-super-premium": [
    "hsbc-premier",
    "axis-magnus-burgundy",
    "hdfc-diners-club-black-metal",
    "hdfc-infinia-metal",
    "icici-emeralde-private-metal",
    "axis-magnus",
    "kotak-solitaire",
    "icici-times-black",
    "sc-beyond",
    "kotak-white-reserve",
    "amex-platinum-reserve",
    "axis-reserve",
  ],
  "spend-fuel-heavy": [
    "hsbc-premier",
    "hdfc-infinia-metal",
    "icici-emeralde-private-metal",
    "hdfc-diners-club-black-metal",
    "hdfc-regalia-gold",
    "hsbc-travelone",
    "axis-atlas",
    "kotak-solitaire",
    "amex-platinum-travel",
    "axis-magnus-burgundy",
    "hdfc-marriott-bonvoy",
    "sc-ultimate",
  ],
  "spend-high-base": [
    "hsbc-premier",
    "hdfc-diners-club-black-metal",
    "axis-magnus-burgundy",
    "icici-emeralde-private-metal",
    "hdfc-infinia-metal",
    "hsbc-travelone",
    "axis-atlas",
    "hdfc-regalia-gold",
    "kotak-solitaire",
    "axis-magnus",
    "bobcard-etihad-guest-premium",
    "indusind-tiger",
  ],
  "spend-international": [
    "hsbc-premier",
    "bobcard-etihad-guest-premium",
    "hdfc-infinia-metal",
    "icici-emeralde-private-metal",
    "equitas-powermiles",
    "sc-ultimate",
    "icici-times-black",
    "yes-marquee",
    "kotak-solitaire",
    "au-ixigo",
    "hdfc-regalia-gold",
    "idfc-mayura",
  ],
  "spend-level-heavy": [
    "hsbc-premier",
    "hdfc-diners-club-black-metal",
    "axis-magnus-burgundy",
    "hdfc-infinia-metal",
    "icici-emeralde-private-metal",
    "hsbc-travelone",
    "hdfc-regalia-gold",
    "axis-atlas",
    "kotak-solitaire",
    "axis-magnus",
    "bobcard-etihad-guest-premium",
    "axis-flipkart-super-elite",
  ],
  "spend-level-light": [
    "hsbc-premier",
    "hdfc-diners-club-black-metal",
    "hdfc-infinia-metal",
    "axis-magnus-burgundy",
    "icici-emeralde-private-metal",
    "hsbc-travelone",
    "hdfc-regalia-gold",
    "axis-atlas",
    "kotak-solitaire",
    "axis-magnus",
    "bobcard-etihad-guest-premium",
    "sc-ultimate",
  ],
  "spend-level-mid": [
    "hsbc-premier",
    "hdfc-diners-club-black-metal",
    "axis-magnus-burgundy",
    "hdfc-infinia-metal",
    "icici-emeralde-private-metal",
    "hsbc-travelone",
    "hdfc-regalia-gold",
    "axis-atlas",
    "kotak-solitaire",
    "axis-magnus",
    "bobcard-etihad-guest-premium",
    "yes-marquee",
  ],
  "spend-travel-heavy": [
    "hsbc-premier",
    "icici-emeralde-private-metal",
    "hsbc-travelone",
    "axis-magnus-burgundy",
    "hdfc-infinia-metal",
    "hdfc-diners-club-black-metal",
    "axis-atlas",
    "kotak-solitaire",
    "axis-magnus",
    "hdfc-regalia-gold",
    "bobcard-etihad-guest-premium",
    "hsbc-visa-platinum",
  ],
  "usecase-cashback": [
    "titan-sbi",
    "axis-cashback",
    "hdfc-swiggy",
    "hdfc-swiggy-black",
    "hsbc-live-plus",
    "hdfc-swiggy-orange",
    "axis-flipkart",
    "flipkart-sbi",
    "yes-paisabazaar-paisasave",
    "axis-samsung-signature",
    "sbi-cashback",
    "axis-ace",
  ],
  "usecase-dining": [
    "hdfc-swiggy",
    "hdfc-swiggy-black",
    "hsbc-live-plus",
    "hdfc-swiggy-orange",
    "yes-paisabazaar-paisasave",
    "bobcard-eterna",
    "hsbc-rupay-cashback",
    "hdfc-marriott-bonvoy",
    "sbi-card-prime",
    "indusind-eazydiner",
    "yes-first-preferred",
    "axis-fibe",
  ],
  "usecase-entertainment": [
    "hdfc-marriott-bonvoy",
    "hdfc-diners-club-privilege",
    "hsbc-live-plus",
    "sbi-card-prime",
    "sbi-card-elite",
    "bpcl-sbi-octane",
    "landmark-rewards-sbi-prime",
    "hsbc-rupay-cashback",
    "icici-coral",
    "axis-my-zone",
    "bobcard-easy",
  ],
  "usecase-fuel": [
    "bpcl-sbi-octane",
    "idfc-first-power-plus",
    "kotak-cashback-plus",
    "icici-hpcl-super-saver",
    "icici-hpcl-coral",
    "bpcl-sbi",
    "axis-indianoil",
    "axis-indianoil-easy",
    "hdfc-indianoil",
    "idfc-first-power",
    "axis-indianoil-premium",
    "sc-platinum-rewards",
  ],
  "usecase-grocery": [
    "hdfc-swiggy",
    "hdfc-swiggy-black",
    "hsbc-live-plus",
    "hdfc-swiggy-orange",
    "rbl-patanjali-swarn",
    "kotak-cashback-plus",
    "rbl-patanjali-vishisht",
    "sbi-card-prime",
    "hsbc-rupay-cashback",
    "sc-manhattan-platinum",
    "hdfc-moneyback-plus",
    "bpcl-sbi-octane",
  ],
  "usecase-online": [
    "csb-jupiter-edge-plus",
    "axis-cashback",
    "sbi-cashback",
    "phonepe-sbi-select-black",
    "hdfc-pixel-play",
    "bobcard-eterna",
    "indusind-eazydiner",
    "kotak-cashback-plus",
    "cheq-au",
    "phonepe-sbi-purple",
    "bobcard-snapdeal",
    "yes-pop-club",
  ],
  "usecase-travel": [
    "hsbc-premier",
    "hdfc-diners-club-black-metal",
    "axis-magnus-burgundy",
    "hdfc-infinia-metal",
    "icici-emeralde-private-metal",
    "hsbc-travelone",
    "hdfc-regalia-gold",
    "axis-atlas",
    "kotak-solitaire",
    "axis-magnus",
    "bobcard-etihad-guest-premium",
    "yes-marquee",
  ],
  "usecase-upi": [
    "yes-kiwi",
    "au-ixigo",
    "indigo-sbi-elite",
    "kotak-white-reserve",
    "yes-pop-club",
    "yes-reserv",
    "reliance-sbi-prime",
    "phonepe-sbi-select-black",
    "hdfc-tata-neu-infinity",
    "hsbc-rupay-platinum",
    "tata-neu-infinity-sbi",
    "hsbc-rupay-cashback",
  ],
}
`;

exports[`result split golden (reward-type-split) > snapshots the section membership and order for broad queries 1`] = `
{
  "broad-best-card": {
    "Cashback cards": [
      "titan-sbi",
      "axis-cashback",
      "yes-kiwi",
      "flipkart-sbi",
      "axis-flipkart",
    ],
    "Rewards cards": [
      "hsbc-premier",
      "axis-magnus-burgundy",
      "hdfc-diners-club-black-metal",
      "hsbc-travelone",
      "icici-emeralde-private-metal",
    ],
  },
  "category-online-split": {
    "Cashback cards": [
      "axis-cashback",
      "sbi-cashback",
      "axis-fibe",
      "bobcard-snapdeal",
      "kotak-cashback-plus",
    ],
    "Rewards cards": [
      "csb-jupiter-edge-plus",
      "indusind-eazydiner",
      "phonepe-sbi-select-black",
      "au-ixigo",
      "bobcard-eterna",
    ],
  },
  "premium-degrade-single": {
    "": [
      "axis-atlas",
      "bobcard-etihad-guest-premium",
      "amex-platinum-travel",
      "sc-ultimate",
      "equitas-powermiles",
    ],
  },
  "seo-broad-best-cards": {
    "Cashback cards": [
      "titan-sbi",
      "axis-cashback",
      "yes-kiwi",
      "flipkart-sbi",
      "axis-flipkart",
    ],
    "Rewards cards": [
      "hsbc-premier",
      "axis-magnus-burgundy",
      "hdfc-diners-club-black-metal",
      "hsbc-travelone",
      "icici-emeralde-private-metal",
    ],
  },
}
`;
